--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "TypeScript project for extracting data from Genesys Cloud using PureCloud Platform Client v2",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "build:watch": "tsc --watch",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "dev:watch": "ts-node --watch src/index.ts",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
-    "type-check": "tsc --noEmit",
+    "type-check": "tsc -p tsconfig.build.json --noEmit",
     "clean": "rimraf dist",
     "prebuild": "npm run clean && npm run lint && npm run type-check"
   },
