--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+agents.json
+
 # Dependencies
 node_modules/
 npm-debug.log*
@@ -104,3 +106,4 @@ Thumbs.db
 ehthumbs.db
 Desktop.ini
 $RECYCLE.BIN/
+
